<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.android.academi.fundamental.listadaptera.data.MovieInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerMoviesDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_main_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/description_main_image"
            android:scaleType="centerCrop"

            app:setImageGlide="@{movie.urlImage}"

            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/iv_back_ground_image"
            android:layout_width="125dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/description_background_image"
            android:scaleType="centerCrop"

            app:setImageGlide="@{movie.urlImage}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_main_image"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold|italic"

            android:text="@{movie.title}"

            app:layout_constraintStart_toEndOf="@id/iv_back_ground_image"
            app:layout_constraintTop_toTopOf="@id/iv_back_ground_image"
            tools:text="@tools:sample/cities" />

        <TextView
            android:id="@+id/tv_released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:text="@string/release_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_released_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="16sp"

            android:text="@{movie.releaseDate}"

            app:layout_constraintBaseline_toBaselineOf="@id/tv_released"
            app:layout_constraintStart_toEndOf="@id/tv_released"
            tools:text="@tools:sample/date/mmddyy" />

        <Button
            android:id="@+id/details_btn_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_trailer"
            app:layout_constraintStart_toStartOf="@id/tv_released"
            app:layout_constraintTop_toBottomOf="@id/tv_released" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/overview_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back_ground_image" />

        <TextView
            android:id="@+id/tv_overview_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="start"
            android:textColor="@color/grey"
            android:textSize="14sp"

            android:text="@{movie.description}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            tools:text="@tools:sample/lorem/random" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
